update composer.json for fork

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-  "name": "celtic/lti",
+  "name": "celtic/lti fork for Atlas",
   "description": "PHP class library for building LTI integrations",
   "keywords": ["LTI"],
-  "homepage": "https://github.com/celtic-project/LTI-PHP",
+  "homepage": "https://github.com/eduvo/LTI-PHP",
   "type": "library",
   "license": "LGPL-3.0-or-later",
   "authors": [
     {
-      "name": "Stephen P Vickers",
-      "email": "stephen@spvsoftwareproducts.com"
+      "name": "Andrew Elliott",
+      "email": "aelliott@onatlas.com"
     }
   ],
   "require": {
